# flake8-fastapi

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: latest-changes.yml  lint.yml  publish.yml  test.yml
flake8_fastapi/: __init__.py  errors.py  plugin.py
flake8_fastapi/visitors/: __init__.py  cors_middleware.py  generic_exception_handler.py  no_content_response.py  route_decorator.py  router_prefix.py  undocumented_exception.py
tests/: conftest.py  test_cors_middleware_order.py  test_no_content_response.py  test_route_decorator.py  test_router_prefix.py  test_undocumented_exception.py  test_version.py
tests/cors_middleware_order/: test_cors_middleware_order.py  with_error_args.py  with_error_kwargs.py  without_error_args.py  without_error_kwargs.py
tests/generic_exception_handler/: test_generic_exception_handler.py  with_error_args.py  with_error_kwargs.py  without_error_args.py  without_error_kwargs.py
tests/no_content_response/: test_no_content_response.py  with_error.py  without_error.py  without_error_return.py
tests/route_decorator/: test_route_decorator.py  with_error_async.py  with_error_sync.py  without_error_async.py
tests/router_prefix/: test_router_prefix.py  with_error.py  without_error.py
tests/undocumented_exception/: test_undocumented_exception.py  with_error_http.py  with_error_http_arg.py  with_error_http_object.py  with_error_http_stack.py  without_error_http.py  without_error_http_arg.py  without_error_http_object.py  without_error_http_stack.py  without_error_http_str.py
