[tool.poetry]
name = "flake8-fastapi"
version = "0.1.0"
description = "flake8 plugin that checks FastAPI code against opiniated style rules 🤓"
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kludex/flake8-fastapi"
include = ["flake8_fastapi/py.typed"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.0"
pre-commit = "^2.9.3"
pytest = "^6.2"
pytest-cov = "^2.10.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
